# MCP-Server-App

./: .env.sample  LANGGRAPH_INTEGRATION.md  MERGE.md  README.md  example_langgraph_usage.py  langgraph_agent.py  pyproject.toml  run_client.py  run_server.py  server.py  social_content_creator.py
client/: __init__.py  langgraph_agent.py
examples/: __init__.py  example_langgraph_usage.py
server/: __init__.py  github_tool.py  main.py
tests/: __init__.py  test_mcp_integration.py  test_server.py
